--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#index-gallery4-0" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="false">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016.html">2016</a><a class="dropdown-item" href="2017.html">2017</a><a class="dropdown-item" href="DRAWINGS..html">Tekeningen</a><a class="dropdown-item" href="DRAWINGS..html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="INSPIRATION.html" aria-expanded="false">INSPRIRATIE</a></li><li class="nav-item"><a class="nav-link link" href="MAIL.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="false">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><a class="dropdown-item" href="Tekeningen.html">tekeningen</a><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/-dsc0461aca2-2000x1999-2.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/-dsc0461aca24-2000x1407.jpg);">
 
     
 
@@ -158,8 +158,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p><strong>Addres</strong><br>werkplaats:<br>Alexianenplein 1<br>9000 Gent<br><br><br>
-<strong>Contact</strong><br>
-Email: saar.cools@hotmail.com</p>
+<strong>Contact</strong><strong><br></strong><br>website :&nbsp;<a href="http://www.lucaschilderkunstgent.be/" target="_blank"> http://www.lucaschilderkunstgent.be/</a><br>Email: saar.cools@hotmail.com</p>
                     </div>
                     <div class="col-sm-6"></div>
                 </div>
@@ -169,7 +168,7 @@ Email: saar.cools@hotmail.com</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="qKsE4XJj+wFtl/djCl3I5vvaf8RCl7l5hw9ln4sdxxrentQMVbhcEvfNGAJS7BKZtnlNMqW++hCBhv8hgzJPWfyFnsiDWfjpXi9JQMfG+QhI/Ld9xSdss75cs9U20RZh" data-form-email="true">
+                    <input type="hidden" value="JDUxZG6mF6Ck4H/LMxAI7+W+NYgPVjedOSqJUI4L+xJ+df1GtJAdo6IhMZDMf2UJyJ2xxsKi0MH4wcve/eG1soXrE9T6/EhUnwUdwTn2+ecKg1BQr6C+YY4QLywROOGv" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2-email">Email<span class="form-asterisk">*</span></label>
