--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="false">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><a class="dropdown-item" href="Tekeningen.html">tekeningen</a><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="true">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><a class="dropdown-item" href="Tekeningen.html">tekeningen</a><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -168,7 +168,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ecHWmwyaNGZhee5+kTw4i/9Ho6lxQ42Kj6pS5iu0MeH3D2HpiE3g5NSlMFIFsbygvwlPjd+mNLcmr3soJLQcSNG49RkBEbRCpeGfogBanmnUQTC5hE8BtUSElq2hR9um" data-form-email="true">
+                    <input type="hidden" value="HHZs3UmynYMlDYt5plKE9RoNXrfm9tRRQhgcMW0/zI5hCxqu6C9fGFTV9AZaK+lOOGd6JFLMzB0fplMPTEftUfOZdOD6vxI06QmBV6aKWuP2JO9AbVa/ZowlPNvgqYtE" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2-email">Email<span class="form-asterisk">*</span></label>
