--- a/mail.html
+++ b/mail.html
@@ -42,7 +42,7 @@ Email: saar.cools@hotmail.com</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="HJSuwve7MLpLC4JUAxop6wCUmX+sX1Q4mZbRZSinK1TU1945yyfCynRKliVcsnBKsvgYwerG1NXjwucjOJtGwqslh2NX4IXDVpl+MnkOtjOCkmWyAaINO5dPArc4dD2/" data-form-email="true">
+                    <input type="hidden" value="k0QWvnUffn6rOBki56zfeUp0uzgkzDxsZNlRDQJp1NfA0sdpKlh8fQ5+mD8BSmo3Gebryse/6/0jbk9NUVl8wKt1LUvMn+Eum9yKAbAhG6p7S66VtT+xwA1zuRTdLcRj" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-e-email">Email<span class="form-asterisk">*</span></label>
@@ -61,7 +61,7 @@ Email: saar.cools@hotmail.com</p>
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
