create github pages

--- a/Tekeningen.html
+++ b/Tekeningen.html
@@ -14,9 +14,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise-gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -25,7 +27,33 @@
   
 </head>
 <body>
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery2-k" data-filter="false" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section id="ext_menu-0">
+
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
+        <div class="container">
+
+            <div class="mbr-table">
+                
+                <div class="mbr-table-cell">
+
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="hamburger-icon"></div>
+                    </button>
+
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="false">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><a class="dropdown-item" href="Tekeningen.html">tekeningen</a><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="close-icon"></div>
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
+</section>
+
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-k" data-filter="false" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
@@ -156,7 +184,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
@@ -164,6 +192,8 @@
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/mobirise-gallery/player.min.js"></script>
   <script src="assets/mobirise-gallery/script.js"></script>
