create github pages

--- a/mail.html
+++ b/mail.html
@@ -38,7 +38,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="false">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><a class="dropdown-item" href="Tekeningen.html">tekeningen</a><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="true">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="Tekeningen.html" data-toggle="dropdown-submenu" aria-expanded="true">tekeningen</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="naaktmodel.html">naaktmodel</a><a class="dropdown-item" href="schetsen.html">schetsen</a></div></div><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -70,7 +70,7 @@ Email: saar.cools@hotmail.com</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Iglhn3IT2qvQRcmdCgTe0lDiVzUxvd7aE+IhiGhZ57omooeJgt42lO3Jk8kxXvfrr4t68gAST3X75wsLfAhtw5p6U+XEfzxZ4wWjvIB6NPXMXQqzLtxpJ9WaZeA1mN+6" data-form-email="true">
+                    <input type="hidden" value="O3XaleGP+hYqgQ/IArJ2wtYrlPpILEMDLX3dRob8P40axO4HJo6zMhyQJVQFVs9YNd7CHySBcD49WSTcjtZCdB+mFCPNAOOfYqt4gkKt/CsPeXT0r8RRx38spIeLycPQ" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-e-email">Email<span class="form-asterisk">*</span></label>
