--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="false">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><a class="dropdown-item" href="Tekeningen.html">tekeningen</a><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">STARTPAGINA</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#index-gallery4-0" data-toggle="dropdown-submenu" aria-expanded="true">WERK</a><div class="dropdown-menu"><a class="dropdown-item" href="2016 .html">2016</a><a class="dropdown-item" href="2017.html">2017</a><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="Tekeningen.html" data-toggle="dropdown-submenu" aria-expanded="true">tekeningen</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="naaktmodel.html">naaktmodel</a><a class="dropdown-item" href="schetsen.html">schetsen</a></div></div><a class="dropdown-item" href="werkworking.html">werk in wording</a></div></li><li class="nav-item"><a class="nav-link link" href="inspiriatie.html" aria-expanded="false">INSPiRATIE</a></li><li class="nav-item"><a class="nav-link link" href="mail.html" aria-expanded="false"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/-dsc0461aca24-2000x1407.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/-dsc0461aca24-2000x1407.jpg);">
 
     
 
@@ -209,7 +209,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="BHVgPBt+Y8jMBzFkgzSGw3eLEKtPCRamxjAhjeUI+Cp3SxObfhGlbexbH/RN9n4Sq8pxq4tEhHV5XqVMeWpoeMhSTB8FB7Z90h2uTGFvGP1BrQD1FKG8g+ThDBpbIZuQ" data-form-email="true">
+                    <input type="hidden" value="SDqbzH50b7wNTPLd1c4VdN5Rbj/d669yiH4Ei3JCZ9Rv1QhTw0v7wiojQRgGna5ZhcV0xw+CGEdC4/T4MFwLj3WrJH4phXUNctrv11vVJz7v0AxlW8QskhauNrUYydZ9" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2-email">Email<span class="form-asterisk">*</span></label>
