--- a/page13.html
+++ b/page13.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-1b" data-rv-view="1004">
+<section id="ext_menu-1b" data-rv-view="1438">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -75,12 +75,12 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design your own website for free</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-21" data-rv-view="1006" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/c">free web site maker</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-21" data-rv-view="1440" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">workspace Alexianenplein</span></h3>
+                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">atelier Alexianenplein</span></h3>
                 <div>
 
                   <div class="mbr-social-likes" data-counters="false">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-22" data-rv-view="1008" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-22" data-rv-view="1442" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
