--- a/page7.html
+++ b/page7.html
@@ -41,7 +41,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-z" data-rv-view="916">
+<section id="ext_menu-z" data-rv-view="1430">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">how to build a website for free</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="918" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="1432" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -82,7 +82,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: rgb(0, 0, 0);"></a></div>
+                    <div class="card-img iconbox"><a href="page12.html" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: rgb(0, 0, 0);"></a></div>
                     <div class="card-block">
                         <h4 class="card-title"><a href="page12.html" class="text-black" style="font-weight: normal;">houten panelen</a></h4>
                         <h5 class="card-subtitle"></h5>
@@ -95,7 +95,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
+                    <div class="card-img iconbox"><a href="page11.html" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
                         <h4 class="card-title"><span style="font-weight: normal;"><a href="page11.html" class="text-black">tekeningen</a></span></h4>
                         <h5 class="card-subtitle"></h5>
@@ -108,7 +108,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
+                    <div class="card-img iconbox"><a href="page10.html" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
                         <h4 class="card-title"><span style="font-weight: normal;"><a href="page10.html" class="text-black">schilderijen</a></span></h4>
                         <h5 class="card-subtitle">op doek</h5>
@@ -121,7 +121,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
+                    <div class="card-img iconbox"><a href="naaktmodel.html" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
                         <h4 class="card-title"><span style="font-weight: normal;"><a href="naaktmodel.html" class="text-black">naaktmodel</a></span></h4>
                         <h5 class="card-subtitle">tekeningen</h5>
@@ -134,7 +134,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
+                    <div class="card-img iconbox"><a href="page13.html" class="mbri-more-horizontal mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
                         <h4 class="card-title"><span style="font-weight: normal;"><a href="page13.html" class="text-black">atelier</a></span></h4>
                         <h5 class="card-subtitle">LUCA school of Arts</h5>
@@ -148,7 +148,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="921" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="1435" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
 
     
 
