--- a/mail.html
+++ b/mail.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-0" data-rv-view="138">
+<section id="ext_menu-0" data-rv-view="100">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-e" data-rv-view="129" style="background-color: rgb(204, 204, 204); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobirise.co/c">web page maker</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-e" data-rv-view="91" style="background-color: rgb(204, 204, 204); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -90,7 +90,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Wuq8maD31kkH+etiv5bgfXdN5K5BAX3G8+zwvkwYzcbFa7MMNWhC2E30jBzg7+JN95L+S3zsz4EytJiARaSQYk9C5d8GWCa2XdAl1J+kXj4/vDWlEqHrfXrnN0fV43PJ" data-form-email="true">
+                    <input type="hidden" value="UAwvyPbvlC0k7Mgw1Q65MHuPtKU6jd7M37Z+/DAjwhcnU++b0DmCV2MEtVd/KJQEeMsQsy0Lfzleu6K24jyCoi3ZHcQF4eTrVcJt3Bcx6NAFwqknICdONovepaWp91lW" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-e-email">Email<span class="form-asterisk">*</span></label>
