--- a/page18.html
+++ b/page18.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-2e" data-rv-view="334">
+<section id="ext_menu-2e" data-rv-view="304">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-2q" data-rv-view="332" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-2q" data-rv-view="302" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-2o" data-rv-view="336" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-2o" data-rv-view="306" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
