--- a/page7.html
+++ b/page7.html
@@ -40,7 +40,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-z" data-rv-view="159">
+<section id="ext_menu-z" data-rv-view="121">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design a website</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="161" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="123" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -159,7 +159,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="164" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="126" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
 
     
 
