--- a/schetsen.html
+++ b/schetsen.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-0" data-rv-view="157">
+<section id="ext_menu-0" data-rv-view="119">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1m" data-rv-view="140" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1m" data-rv-view="102" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-s" data-rv-view="142" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-s" data-rv-view="104" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
